k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result  
  labels:
    app: result  
spec:
  replicas: 1                
  selector:
    matchLabels:
      app: result  
  template:                  
    metadata:
      labels:
        app: result  
    spec:
      containers:
      - name: result  
        image: samettunca/result:latest
        ports:
        - containerPort: 80
