k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote    
  labels:
    app: vote
spec:
  replicas: 1                
  selector:
    matchLabels:
      app: vote
  template:                  
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: samettunca/vote:latest
        ports:
        - containerPort: 80
