k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker 
  labels:
    app: worker 
spec:
  replicas: 1                
  selector:
    matchLabels:
      app: worker  
  template:                  
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: samettunca/worker:latest
