k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result     
  namespace: default        
spec:
  type: ClusterIP          
  selector:
    app: result   
  ports:
    - protocol: TCP
      port: 80              
      targetPort: 80
