k8s/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote      
  namespace: default        
spec:
  type: ClusterIP          
  selector:
    app: vote  
  ports:
    - protocol: TCP
      port: 80              
      targetPort: 80
